--- a/templates/content/records.html
+++ b/templates/content/records.html
@@ -12,7 +12,7 @@
 							<input type="date" id="date-endrange" class="form-control form-control-sm"/>
 						</div>
 
-						<div class="col-2">
+						<div class="col">
 							<select id="completedby-filter" class="form-select form-select-sm">
 								<option>Bike</option>
 								<option>Running</option>
