--- a/style/style.css
+++ b/style/style.css
@@ -21,18 +21,18 @@ nav {
 
 /*timer*/
 #stopwatch {
-    padding: 10px;
+    padding: 7px 4px;
 }
 
 #timer {
     background-color: #E6EEF0;
-    max-width: 70%;
     margin: auto;
     border-radius: 5px;
 }
+
 p.clock {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2.2em;
 }
 
 .buttons {
@@ -50,6 +50,10 @@ p.clock {
     font-size: 0.8em;
 }
 
+form div {
+    padding: 5px;
+}
+
 .records-nav {
     float: right;
     padding-top: 2%;
@@ -57,7 +61,6 @@ p.clock {
 
 .recent {
     padding: 5px 8px 3px;
-    /* background-color: #F2F6F7;     */
 }
 
 #nav-buttons {
