--- a/templates/content/records.html
+++ b/templates/content/records.html
@@ -1,82 +1,143 @@
 {{define "content"}}	
 		<section>
-			<div id="records" class="container records">
-				<div id="search-box" class="search-box">
-					<form class="row g-1 align-items-end">
-						<div class="col">
-							<label for="date-startrange">From</label>
-							<input type="date" id="date-startrange" class="form-control form-control-sm"/>
-						</div>
-						<div class="col">
-							<label for="date-endrange">to</label>
-							<input type="date" id="date-endrange" class="form-control form-control-sm"/>
+			<div id="records" class="container-fluid-sm records">
+				<div id="quick-filters">
+					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="filterDate(7)">Past 7 days</button>
+					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="filterDate(31)">Past month</button>
+				</div>
+
+				<!--
+				<div id="filter-form" class="filter-form">
+					<form>
+						<div class="row g-1 align-items-end">
+							<div class="col-6">
+								<label for="date-startrange">From</label>
+								<input type="date" id="date-startrange" class="form-control form-control-sm"/>
+							</div>
+							<div class="col-6">
+								<label for="date-endrange">to</label>
+								<input type="date" id="date-endrange" class="form-control form-control-sm"/>
+							</div>
 						</div>
 
-						<div class="col">
-							<select id="completedby-filter" class="form-select form-select-sm">
-								<option>Bike</option>
-								<option>Running</option>
-							</select>
-						</div>
-						<div class="col">
-							<input class="btn btn-primary btn-sm" type="submit" value="Filter"/>
+						<div class="row g-1 align-items-end">
+							<div class="col">
+								<select id="completedby-filter" class="form-select form-select-sm">
+									<option>Bike</option>
+									<option>Running</option>
+								</select>
+							</div>
+							<div class="col">
+								<input class="btn btn-primary btn-sm" type="submit" value="Filter"/>
+							</div>
 						</div>
 					</form>
 				</div>
-				<div id="records-nav" class="records-nav">
-					<button type="button" class="btn btn-outline-secondary btn-sm">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-							<path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-						</svg>
-					</button>
-					<button type="button" class="btn btn-outline-secondary btn-sm">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-							<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
-						</svg>
-					</button>
+				-->
+				<div id="table-headers" class="container-fluid-sm p-1">
+					<div id="header-row" class="row px-2">
+						<div class="col p-1">
+							Date
+						</div>
+						<div class="col p-1">
+							Time
+						</div>
+						<div class="col p-1">
+							Distance
+						</div>
+						<div class="col-2 p-1">
+							By
+						</div>
+					</div>
 				</div>
-				<table class="table table-striped records">
-					<thead>
-						<tr>
-							<th>Date</th>
-							<th>Time completed</th>
-							<th>Distance</th>
-							<th>By</th>
-						</tr>
-					</thead>
-					<tbody>
-						<!--
-						<tr>
-							<td>31/1/22</td>
-							<td>15:20.12</td>
-							<td>4.5mi</td>
-							<td>Bike</td>
-						</tr>
-						<tr>
-							<td>27/1/22</td>
-							<td>10:20.64</td>
-							<td>3.5mi</td>
-							<td>Bike</td>
-						</tr>
-						<tr>
-							<td>21/1/22</td>
-							<td>45:20.04</td>
-							<td>4.0km</td>
-							<td>Running</td>
-						</tr>-->
-						{{range .RecordList}}
-						<tr>
-							<td>{{.Date}}</td>
-							<td>{{.Time}}</td>
-							<td>{{.Distance}} {{.DistanceUnit}}</td>
-							<td>{{.By}}</td>
-						</tr>
-						{{end}}
 
-					</tbody>
-				</table>
+				<div id="records-container" class="table-responsive">
+					<table id="records-table" class="table table-sm table-striped records">
+						<col style="width:26%">
+						<col style="width:25%">
+						<col style="width:24%">
+						<col style="width:15%">
+						<tbody>
+							{{range .RecordList}}
+							<tr>
+								<td>{{.Date}}</td>
+								<td>{{.Time}}</td>
+								<td>{{.Distance}} {{.DistanceUnit}}</td>
+								<td>{{.By}}</td>
+							</tr>
+							{{end}}
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</section>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+	<script>
+		function findStartDate(date, days) {
+			const startRange = new Date(Number(date))
+			startRange.setDate(date.getDate() - days)
+			return startRange
+		}
+
+		function convertToISODate(dateString) {
+			split_date = dateString.split("/")
+			dd = split_date[0]
+			mm = split_date[1]
+			yyyy = split_date[2]
+			const isoDate = yyyy + "-"+ mm + "-"+ dd
+			return isoDate
+		}
+
+		function filterDate(days) {
+			// Declare variables
+			var table, tr, td, i, txtValue;
+
+			table = document.getElementById("records-table");
+			tr = table.getElementsByTagName("tr");
+
+			endRange = new Date(Date.now())
+			startRange = findStartDate(endRange, days)
+		
+			// Loop through all table rows, and hide those who don't match the search query
+			for (i = 0; i < tr.length; i++) {
+				td = tr[i].getElementsByTagName("td")[0];
+				if (td) {
+					dateValue = td.textContent || td.innerText;
+					convertedDate = new Date(convertToISODate(dateValue));
+
+					if (convertedDate >= startRange && convertedDate <= endRange) {
+					tr[i].style.display = "";
+					} else {
+					tr[i].style.display = "none";
+					}
+				}
+			}
+		}
+		/*
+		function filterTable() {
+		  // Declare variables
+		  var input, filter, table, tr, td, i, txtValue;
+		  input = document.getElementById("myInput");
+		  filter = input.value.toUpperCase();
+		  table = document.getElementById("myTable");
+		  tr = table.getElementsByTagName("tr");
+		
+		  // Loop through all table rows, and hide those who don't match the search query
+		  for (i = 0; i < tr.length; i++) {
+			td = tr[i].getElementsByTagName("td")[0];
+			if (td) {
+			  txtValue = td.textContent || td.innerText;
+			  if (txtValue.toUpperCase().indexOf(filter) > -1) {
+				tr[i].style.display = "";
+			  } else {
+				tr[i].style.display = "none";
+			  }
+			}
+		  }
+		}
+		*/
+	</script>
+
 {{end}}
