--- a/templates/content/records.html
+++ b/templates/content/records.html
@@ -2,8 +2,8 @@
 		<section>
 			<div id="records" class="container-fluid-sm records">
 				<div id="quick-filters">
-					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="filterDate(7)">Past 7 days</button>
-					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="filterDate(31)">Past month</button>
+					<button id="past-week" type="button" class="btn btn-outline-secondary btn-sm">Past 7 days</i></button>
+					<button id="past-month" type="button" class="btn btn-outline-secondary btn-sm">Past month</i></button>
 				</div>
 
 				<!--
@@ -75,46 +75,117 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 	<script>
+		"use strict";
+
 		function findStartDate(date, days) {
-			const startRange = new Date(Number(date))
-			startRange.setDate(date.getDate() - days)
-			return startRange
+			let endRange = new Date(Number(date));
+			let startRange = endRange.setDate(date.getDate() - days);
+
+			return startRange;
 		}
 
 		function convertToISODate(dateString) {
-			split_date = dateString.split("/")
-			dd = split_date[0]
-			mm = split_date[1]
-			yyyy = split_date[2]
-			const isoDate = yyyy + "-"+ mm + "-"+ dd
-			return isoDate
+			let split_date = dateString.split("/");
+			let dd = split_date[0];
+			let mm = split_date[1];
+			let yyyy = split_date[2];
+			const isoDate = yyyy + "-"+ mm + "-"+ dd;
+
+			return isoDate;
 		}
 
 		function filterDate(days) {
-			// Declare variables
-			var table, tr, td, i, txtValue;
+			var table, tr, td, i;
 
-			table = document.getElementById("records-table");
-			tr = table.getElementsByTagName("tr");
+			var table = document.getElementById("records-table");
+			var tr = table.getElementsByTagName("tr");
 
-			endRange = new Date(Date.now())
-			startRange = findStartDate(endRange, days)
+			const endRange = new Date(Date.now())
+			const startRange = findStartDate(endRange, days)
 		
 			// Loop through all table rows, and hide those who don't match the search query
 			for (i = 0; i < tr.length; i++) {
 				td = tr[i].getElementsByTagName("td")[0];
 				if (td) {
-					dateValue = td.textContent || td.innerText;
-					convertedDate = new Date(convertToISODate(dateValue));
+					let dateValue = td.textContent || td.innerText;
+					let convertedDate = new Date(convertToISODate(dateValue));
 
 					if (convertedDate >= startRange && convertedDate <= endRange) {
-					tr[i].style.display = "";
+						tr[i].style.display = "";
 					} else {
-					tr[i].style.display = "none";
+						tr[i].style.display = "none";
 					}
 				}
 			}
 		}
+
+		function resetFilter(event) {
+			var table, tr, td, i;
+
+			table = document.getElementById("records-table");
+			tr = table.getElementsByTagName("tr");
+		
+			// Loop through all table rows and display
+			for (i = 0; i < tr.length; i++) {
+					tr[i].style.display = "";
+			}			
+		}
+
+		class FilterDateButton {
+			constructor(days, buttonId) {
+				this.days = days;
+				this.buttonId = buttonId;
+				this.toggleFlag = false;
+				this.buttonObj = document.getElementById(buttonId);
+				this.closeButton = ' <i class="bi bi-x" style="display: inline-block;"></i>';
+			}
+			
+			toggleFilter() {
+				const toggleFlag = () => {
+					if (this.toggleFlag) {
+						this.toggleFlag = false;
+					} else {
+						this.toggleFlag = true;
+					}
+					console.log(this.toggleFlag);
+				}
+
+				const toggleStyle = () => {
+					if (this.toggleFlag) {
+						this.className = "btn btn-secondary btn-sm";
+					} else {
+						this.className = "btn btn-outline-secondary btn-sm";
+					}
+				}
+
+				const toggleClose = () => {
+					if (this.toggleFlag) {
+						let html = this.innerHTML;
+						this.innerHTML = html + ' <i class="bi bi-x" style="display: inline-block;"></i>';
+					} else {
+						// remove icon by resetting with inner text
+						this.innerHTML = this.innerText;
+					}
+				}
+
+				toggleFlag();
+				toggleStyle();
+				toggleClose();
+
+				if (this.toggleFlag) {
+					filterDate(this.days);
+				} else {
+					resetFilter();
+				}
+			}
+		}
+
+		let weekFilterBtn = new FilterDateButton(7, "past-week");
+		let monthFilterBtn = new FilterDateButton(31, "past-month");
+
+		weekFilterBtn.buttonObj.addEventListener("click", weekFilterBtn.toggleFilter);
+		monthFilterBtn.buttonObj.addEventListener("click", monthFilterBtn.toggleFilter);
+
 		/*
 		function filterTable() {
 		  // Declare variables
