removed up i tags

--- a/templates/content/records.html
+++ b/templates/content/records.html
@@ -2,8 +2,8 @@
 		<section>
 			<div id="records" class="container-fluid-sm records">
 				<div id="quick-filters">
-					<button id="past-week" type="button" class="btn btn-outline-secondary btn-sm">Past 7 days</i></button>
-					<button id="past-month" type="button" class="btn btn-outline-secondary btn-sm">Past month</i></button>
+					<button id="past-week" type="button" class="btn btn-outline-secondary btn-sm">Past 7 days</button>
+					<button id="past-month" type="button" class="btn btn-outline-secondary btn-sm">Past month</button>
 				</div>
 
 				<!--
